# ibm-watson-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  rust.yml
examples/: stt.rs  tts.rs
src/: lib.rs
src/auth/: errors.rs  mod.rs
src/speech-to-text/: mod.rs
src/speech-to-text/models/: errors.rs  mod.rs
src/tests/: auth.rs
src/text-to-speech/: mod.rs
src/text-to-speech/custom-models/: mod.rs
src/text-to-speech/customisations/: mod.rs
src/text-to-speech/customisations/errors/: mod.rs  models.rs  prompts.rs  words.rs
src/text-to-speech/customisations/models/: errors.rs  mod.rs
src/text-to-speech/customisations/prompts/: mod.rs
src/text-to-speech/customisations/words/: errors.rs  mod.rs
src/text-to-speech/pronunciation/: errors.rs  mod.rs
src/text-to-speech/speaker-models/: errors.rs  mod.rs
src/text-to-speech/synthesis/: errors.rs  mod.rs
src/text-to-speech/user-data/: errors.rs  mod.rs
src/text-to-speech/voices/: errors.rs  mod.rs
