[package]
name = "ibm-watson"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
serde_json = "1.0.82"
serde = { version = "1.0.138", features = [ "derive" ] }
thiserror = "1.0.31"
hyper = { version = "0.14.20", features = [ "http1", "client", "tcp" ] }
hyper-rustls = "0.23.0"
url = "2.2.2"
clap = { version = "3.2.8", features = [ "derive"] }
bytes = "1.1.0"

[features]
default = []
tts = []
http1 = []
#http2 = []
#websocket = []
full = [
  "tts",
]

[dev-dependencies]
tokio = { version = "1.19.2", features = [ "macros", "rt-multi-thread" ] }
clap = { version = "3.2.8", features = [ "derive" ] }

[[example]]
name = "tts"
required-features = ["tts"]
path = "examples/tts.rs"

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
