[package]
name = "ibm-watson"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/kawaki-san/ibm-watson-rs"
license = "MIT OR Apache-2.0"
homepage = "https://www.ibm.com/watson"
description = "A wrapper for interacting with the IBM Watson API"
documentation = "https://docs.rs/ibm-watson"
categories = ["api-bindings", "network-programming", "web-programming", "web-programming::http-client"]
authors = ["Kawaki"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
serde_json = "1.0.82"
serde = { version = "1.0.138", features = [ "derive" ] }
thiserror = "1.0.31"
reqwest = { version = "0.11.11", features = [ "json", "multipart" ] }
clap = { version = "3.2.8", features = [ "derive" ] }
tokio = { version = "1.19.2", features = [ "fs" ] }
bytes = "1.1.0"
url = "2.2.2"

[features]
default = []
tts = []
http2 = []
full = [
  "tts",
]

[dev-dependencies]
tokio = { version = "1.19.2", features = [ "macros", "rt-multi-thread" ] }
clap = { version = "3.2.8", features = [ "derive" ] }

[[example]]
name = "tts"
#required-features = ["tts"]
path = "examples/tts.rs"

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
